assets/css/styles.css
* {
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

:root {
    --header-bg: #10375C;
}

body,
button {
    font-size: 1.6rem;
    font-family: 'Sora', sans-serif;
}

/* Common */
a {
    text-decoration: none;
}

.btn {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    height: 60px;
    min-width: 205px;
    background: #2E80CE;
    border: 1px solid #2E80CE;
    border-radius: 30px;
    padding: 0 8px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.75;
    text-align: center;
    color: #FFFFFF;
    cursor: pointer;
}

.btn:hover {
    opacity: 0.9;
}

.container {
    margin: 0 auto;
    width: 1170px;
    max-width: calc(100% - 48px);
}


.section-heading {
    font-weight: 600;
    font-size: 5rem;
    line-height: 1.20;
    letter-spacing: -0.02em;
    color: #10375C;
}

.section-desc {
    margin-top: 18px;
    font-weight: 300;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #575F66;
    max-width: 468px;
}

/* Header  */
.header {
    padding-top: 30px;
    min-height: 95vh;
    background: var(--header-bg);
}

.header-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar__list {
    display: flex;
}

.navbar__link {
    padding: 4px 21px;
    font-weight: 300;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #C9D2DA;
}

.navbar__link--active,
.navbar__link:hover {
    color: #FFFFFF;
    -webkit-text-stroke-width: thin;
}

.navbar__link--active::before {
    content: "";
    display: inline-block;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background: #fff;
    position: relative;
    left: -8px;
    top: -2px;
}

.header-action {
    display: flex;
    gap: 20px;
}

.header-action__login {
    min-width: unset;
    height: 44px;
    background: none;
    font-weight: 300;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #C9D2DA;
    border: none;
}

.header-action__signup {
    border-radius: 22px;
    min-width: 104px;
    height: 44px;
}

.hero {
    margin-top: 76px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.hero__content {
    width: 44%;
    flex-shrink: 0;
}

.hero__heading {
    font-weight: 600;
    font-size: 7rem;
    line-height: 1.14;
    letter-spacing: -0.02em;
    color: #FFFFFF;
}

.hero__desc {
    margin-top: 22px;
    font-weight: 300;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #C9D2DA;
}

.hero__row {
    margin-top: 38px;
}

.hero__phone {
    margin-left: 38px;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #FFFFFF;
}

.hero-media {
    flex-grow: 1;
}

.hero__image {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
}

.hero__img {
    height: 540px;
    width: 330px;
    border-radius: 6px;
    object-fit: cover;
}

.hero__img:first-child {
    margin-right: -6px;
    position: relative;
}

.hero__img:last-child {
    width: 210px;
    height: 410px;
}

/* Service */
.service {
    margin: 170px 0;
}

.service .section-heading,
.service .section-desc {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.service-row {
    margin-top: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.service__list {
    margin-bottom: 55px;
}

.service__img {
    width: 570px;
    height: 570px;
    border-radius: 12px;
    object-fit: cover;
}

.service-item {
    display: flex;
    gap: 20px;
    width: 470px;
    padding: 22px;
}

.service-item+.service-item {
    margin-top: 8px;
}

.service-item:hover {
    background: #FFFFFF;
    box-shadow: 0px 14px 28px rgba(0, 0, 0, 0.05);
    border-radius: 10px;
}

.service-item__icon-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    color: #10375c;
    background: #eff6fd;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.05);
    transition: 0.25s;
}

.service-item:hover .service-item__icon-wrap {
    color: #FFFFFF;
    background: #2E80CE;
    box-shadow: 0px 8px 16px rgba(40, 155, 222, 0.15);
}

.service-item__heading {
    font-weight: 600;
    font-size: 1.8rem;
    line-height: 1.28;
    color: #10375C;
}

.service-item__desc {
    margin-top: 8px;
    font-weight: 300;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #575F66;
}

/* Work */

.work {
    padding: 100px 0;
    background: #F7FBFF;
}

.work__list {
    margin-top: 70px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 30px;
}

.work__item {
    padding: 44px;
    border-radius: 4px;
    border: 16px solid #EAF6FF;
    transition: .25s;
}

.work__item:hover {
    transform: translateY(-16px);
    border-color: #2E80CE;
}

.work-item__heading {
    margin-top: 20px;
    font-weight: 600;
    font-size: 1.6rem;
    line-height: 1.38;
    color: #10375C;
}

.work-item__desc {
    margin-top: 28px;
    font-weight: 300;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #575F66;
}

.work-item__more {
    margin-top: 18px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #2E80CE;
}

/* Feature */

.feature {
    padding: 170px 0;
}

.feature__inner {
    display: flex;
    align-items: center;
    gap: 130px;
}

.feature__media {
    width: 48%;
}

.feature__images {
    position: relative;
    padding-bottom: 121px;
}

.feature__img {
    width: 512px;
    height: 370px;
    border-radius: 6px;
    object-fit: cover;
}

.feature__img:first-child {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 332px;
    height: 370px;
}

.feature__content .btn {
    margin-top: 38px;
}

/* Member */

.member {
    padding: 170px 0;
}

.member .btn {
    margin-top: 38px;
}

.member__header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.member-item__img-bg {
    border-radius: 6px;
    padding-top: 28px;
    background: #EAF6FF;
    overflow: hidden;
}

.member-item__img-thumb {
    display: block;
    width: 100%;
    height: 310px;
    object-fit: cover;
    transition: 0.25s;
}

.member-item:hover .member-item__img-thumb {
    transform: scale(1.1);
}

.member__list {
    margin-top: 70px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 30px;
}

.member-item__name,
.member-item__title {
    text-align: center;
}

.member-item__name {
    margin-top: 12px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.75;
    color: #10375c;
}

.member-item__title {
    font-weight: 300;
    font-size: 1.4rem;
    line-height: 1.86;
    color: #575f66;
}

.member__control {
    margin-top: 38px;
    align-items: center;
    justify-content: center;
}

.control {
    display: flex;
    gap: 18px;
}

.control__btn {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 36px;
    height: 36px;
    border-radius: 50%;
    border: 1px solid #575f66;
    outline: none;
    color: #575f66;
    background: #fff;
    cursor: pointer;
    transition: 0.25s;
}

.control__btn:hover {
    border-color: #2E80CE;
    background: #2E80CE;
    color: white;
}

.control-next-icon {
    rotate: 180deg;
}

/* Install */
.install {
    padding-top: 95px;
}

.install__inner {
    padding: 0 70px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: #2E80CE;
    border-radius: 4px;
}

.install__img {
    margin-top: -95px;
    display: block;
    width: 284px;
    height: 522px;
    object-fit: cover;
}

.install__content {
    width: 586px;
}

.install__heading,
.install__desc {
    color: white;
}

.install__desc {
    margin-top: 18px;
    max-width: unset;
}

.install__row {
    margin-top: 38px;
    display: flex;
    gap: 18px;
    border: none;
    background: none;
}

.install__btn {
    cursor: pointer;
}

/* News */
.news {
    padding: 170px 0;
}

.news__heading {
    max-width: 470px;
}

.news__inner {
    display: flex;
    justify-content: space-between;
}

.news__more {
    display: inline-block;
    margin-top: 28px;
    font-weight: 600;
    font-size: 1.8rem;
    line-height: 1.56;
    text-decoration-line: underline;
    color: #10375C;
}

.news__control {
    margin-top: 40px;
}

.news-item__thumb {
    width: 100%;
    aspect-ratio: 270 / 172;
    object-fit: cover;
}

.news__list {
    width: 570px;
    display: flex;
    gap: 30px;
}

.news-item {
    flex: 1;
    overflow: hidden;
    background: #FFFFFF;
    border: 1px solid #E8EBEE;
    border-radius: 12px;
}

.news-item__body {
    padding: 18px 23px;
}

.news-item__heading {
    font-weight: 600;
    font-size: 1.6rem;
    line-height: 1.62;
    color: #10375C;
}

.news-item__desc {
    margin-top: 10px;
    font-weight: 300;
    font-size: 1.4rem;
    line-height: 1.71;
    color: #575F66;
}

.news-item__more {
    display: inline-block;
    margin-top: 12px;
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.28;
    color: #2E80CE;
}

